--- a/yes_page.html
+++ b/yes_page.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!<br>
+        <h1 class="header_text"><h1>Yay! See you on the 14th! ❤️</h1><br>
         Good Girl >_<
+                        
         </h1>
         <div class="gif_container">
             <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZmthd2picW5nZDBiOWhvZTQwczA2cnU1NDYwd20xcnV3OGw0am1zZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif">
