--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text"><h1>Yay! See you on the 14th! ❤️</h1><br>
+        <h1 class="header_text">Yay! See you on the 14th! ❤️<br>
         Good Girl >_<
                         
         </h1>
