--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="heart-bg" id="heart-bg"></div>
     <div class="container">
         <h1>Will you be my Valentine cutiepie ?</h1>
         <div class="buttons">
