--- a/yes_page.html
+++ b/yes_page.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1 class="header_text">Yay! See you on the 14th! ❤️<br>
         Good Girl 🤗
+            Love u baby ❤️
                         
         </h1>
         <div class="gif_container">
