--- a/yes_page.html
+++ b/yes_page.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="header_text">Yay! See you on the 14th! ❤️<br>
-        Good Girl 🤗
+        Good Girl 🤗<br>
             Love u baby ❤️
                         
         </h1>
